<resources>
    <string name="app_name">Delivery In-Transit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Delivery In-Transit</string>
    <string name="nav_header_subtitle">Enficiencia en entregas</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_repartidor">Panel Repartidor</string>
    <string name="menu_home">Conexión</string>
    <string name="menu_gallery">Pedidos</string>
    <string name="menu_slideshow">Servicio</string>

    <string name="title_conexion">Conexión a Negocio</string>
    <string name="title_pedidos">Pedidos</string>
    <string name="title_servicio">Estado de Servicio</string>
    <string name="title_salir">Salir</string>
    <string-array name="schedule_times">
        <item>Selecciona</item>
        <item>7:00</item>
        <item>7:15</item>
        <item>7:30</item>
        <item>7:45</item>
        <item>8:00</item>
        <item>8:15</item>
        <item>8:30</item>
        <item>8:45</item>
        <item>9:00</item>
        <item>9:15</item>
        <item>9:30</item>
        <item>9:45</item>
        <item>10:00</item>
        <item>10:15</item>
        <item>10:30</item>
        <item>10:45</item>
        <item>11:00</item>
        <item>11:15</item>
        <item>11:30</item>
        <item>11:45</item>
        <item>12:00</item>
        <item>12:15</item>
        <item>12:30</item>
        <item>12:45</item>
        <item>13:00</item>
        <item>13:15</item>
        <item>13:30</item>
        <item>13:45</item>
        <item>14:00</item>
        <item>14:15</item>
        <item>14:30</item>
        <item>14:45</item>
        <item>15:00</item>
        <item>15:15</item>
        <item>15:30</item>
        <item>15:45</item>
        <item>16:00</item>
        <item>16:15</item>
        <item>16:30</item>
        <item>16:45</item>
        <item>17:00</item>
        <item>17:15</item>
        <item>17:30</item>
        <item>17:45</item>
        <item>18:00</item>
        <item>18:15</item>
        <item>18:30</item>
        <item>18:45</item>
        <item>19:00</item>
        <item>19:15</item>
        <item>19:30</item>
        <item>19:45</item>
        <item>20:00</item>
        <item>20:15</item>
        <item>20:30</item>
        <item>20:45</item>
        <item>21:00</item>
        <item>No asignado</item>
    </string-array>
    <string name="title_activity_main_negocio">Main_Negocio</string>
    <string name="title_conexion_negocio">Crea conexión a negocio</string>
    <string name="title_ubicacion">Ubicación de repartidores</string>
    <string name="title_rutas">Rutas Completadas</string>
    <string name="title_asignacion">Asignación de pedidos</string>

</resources>