<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_conexion">

    <fragment
        android:id="@+id/nav_conexion"
        android:name="com.example.quickfleet.ui.conexion.ConexionFragment"
        android:label="@string/title_conexion" tools:layout="@layout/fragment_conexion" />

    <fragment
        android:id="@+id/nav_pedidos"
        android:name="com.example.quickfleet.ui.pedidos.PedidosFragment"
        android:label="@string/title_pedidos"   tools:layout="@layout/fragment_pedidos" />

    <fragment
        android:id="@+id/nav_servicio"
        android:name="com.example.quickfleet.ui.servicio.ServicioFragment"
        android:label="@string/title_servicio"  tools:layout="@layout/fragment_servicio" />

</navigation>